Update module name

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -22,7 +22,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: pluto-project-restore
+            name: pluto-restore-assets
             port:
               number: 9000
       - path: /vs/(.*)
