--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,16 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: pluto-project-restore
+    service: pluto-restore-assets
     stack: prexit
     stage: CODE
-  name: pluto-project-restore
+  name: pluto-restore-assets
 spec:
   ports:
     - name: '9000'
       port: 9000
       targetPort: 9000
   selector:
-    service: pluto-project-restore
+    service: pluto-restore-assets
     stack: prexit
     stage: CODE
