--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,24 +5,17 @@ on:
     branches: [main]
   pull_request:
 
-# Ensure we only ever have one build running at a time.
-# If we push twice in quick succession, the first build will be stopped once the second starts.
-# This avoids any race conditions.
 concurrency:
-    group: ${{ github.ref }}
-    cancel-in-progress: true
-  
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   CI:
     runs-on: ubuntu-latest
-
     permissions:
       contents: read
-
-      # These permissions are required by guardian/actions-riff-raff...
-      id-token: write # ...to exchange an OIDC JWT ID token for AWS credentials
-      pull-requests: write #...to comment on PRs
-
+      id-token: write
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,17 +23,26 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.23.x
-
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Install dependencies
         run: go mod download
- 
       - name: Test
         run: go test ./...
 
-      - name: Make GITHUB_RUN_NUMBER env var available outside of shells
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        shell: bash
-        run: echo "GITHUB_RUN_NUMBER=${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: CI
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -54,20 +56,25 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      
-      - name: Build Docker image pluto-restore-assets
-        run: docker build . -t "guardianmultimedia/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}"
-      - name: Build Docker image pluto-restore-assets-worker
-        run: docker build -f worker/Dockerfile -t guardianmultimedia/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }} .
 
-      - name: Tag Docker image pluto-restore-assets
-        run: docker tag guardianmultimedia/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}
+      - name: Build and tag Docker image pluto-restore-assets
+        run: |
+          docker build --cache-from=type=registry,ref=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:latest . -t "guardianmultimedia/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}"
+          docker tag guardianmultimedia/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}
 
-      - name: Tag Docker image pluto-restore-assets-worker
-        run: docker tag guardianmultimedia/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
-      
       - name: Push Docker image pluto-restore-assets
         run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}
+
+  build-and-push-worker:
+    runs-on: ubuntu-latest
+    needs: CI
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build and tag Docker image pluto-restore-assets-worker
+        run: |
+          docker build -f worker/Dockerfile --cache-from=type=registry,ref=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:latest . -t guardianmultimedia/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
+          docker tag guardianmultimedia/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
 
       - name: Push Docker image pluto-restore-assets-worker
         run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
