--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,16 +36,12 @@ jobs:
         run: go mod download
       - name: Test
         run: go test ./...
-
-  build-and-push:
-    runs-on: ubuntu-latest
-    needs: CI
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - name: Make GITHUB_RUN_NUMBER env var available outside of shells
+        working-directory: ${{env.GITHUB_WORKSPACE}}
+        shell: bash
+        run: echo "GITHUB_RUN_NUMBER=${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-region: ${{ secrets.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
@@ -53,6 +49,11 @@ jobs:
 
       - name: ECR Login
         run: aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: CI
+    steps:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -69,8 +70,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: CI
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and tag Docker image pluto-restore-assets-worker
         run: |
           docker build -f worker/Dockerfile --cache-from=type=registry,ref=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:latest . -t guardianmultimedia/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
