--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,8 @@ jobs:
       contents: read
       id-token: write
       pull-requests: write
+    outputs:
+      run_number: ${{ steps.set_run_number.outputs.run_number }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,6 +52,10 @@ jobs:
       - name: ECR Login
         run: aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
+      - name: Set run number
+        id: set_run_number
+        run: echo "run_number=${{ github.run_number }}" >> $GITHUB_OUTPUT
+
   build-and-push:
     runs-on: ubuntu-latest
     needs: CI
@@ -59,13 +65,16 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build and tag Docker image pluto-restore-assets
-
+        env:
+          RUN_NUMBER: ${{ needs.CI.outputs.run_number }}
         run: |
-          docker build --cache-from=type=registry,ref=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }} . -t "guardianmultimedia/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}"
-          docker tag guardianmultimedia/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}
+          docker build --cache-from=type=registry,ref=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.RUN_NUMBER }} . -t "guardianmultimedia/pluto-restore-assets:${{ env.RUN_NUMBER }}"
+          docker tag guardianmultimedia/pluto-restore-assets:${{ env.RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.RUN_NUMBER }}
 
       - name: Push Docker image pluto-restore-assets
-        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.GITHUB_RUN_NUMBER }}
+        env:
+          RUN_NUMBER: ${{ needs.CI.outputs.run_number }}
+        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets:${{ env.RUN_NUMBER }}
 
   build-and-push-worker:
     runs-on: ubuntu-latest
@@ -76,9 +85,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build and tag Docker image pluto-restore-assets-worker
+        env:
+          RUN_NUMBER: ${{ needs.CI.outputs.run_number }}
         run: |
-          docker build -f worker/Dockerfile --cache-from=type=registry,ref=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }} . -t guardianmultimedia/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
-          docker tag guardianmultimedia/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
+          docker build -f worker/Dockerfile --cache-from=type=registry,ref=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.RUN_NUMBER }} . -t guardianmultimedia/pluto-restore-assets-worker:${{ env.RUN_NUMBER }}
+          docker tag guardianmultimedia/pluto-restore-assets-worker:${{ env.RUN_NUMBER }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.RUN_NUMBER }}
 
       - name: Push Docker image pluto-restore-assets-worker
-        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
+        env:
+          RUN_NUMBER: ${{ needs.CI.outputs.run_number }}
+        run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.RUN_NUMBER }}
