--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -50,6 +50,18 @@ Resources:
             Action: iam:PassRole
             Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${RoleName}'
 
+          - Sid: AllowS3BatchOperations
+            Effect: Allow
+            Action:
+              - s3:CreateJob
+              - s3:GetJob
+              - s3:ListJobs
+              - s3:UpdateJobPriority
+              - s3:UpdateJobStatus
+              - s3control:DescribeJob
+              - s3:DescribeJob
+            Resource: !Sub 'arn:aws:s3:${AWS::Region}:${AWS::AccountId}:job/*'
+
   ProjectRestoreRole:
     Type: AWS::IAM::Role
     Properties:
@@ -67,6 +79,45 @@ Resources:
       ManagedPolicyArns:
         - !Ref ProjectRestorePolicy
 
+  ProjectRestoreUserPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      Description: Policy for pluto-asset-restore IAM user
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Sid: AllowS3BatchOperations
+            Effect: Allow
+            Action:
+              - s3:CreateJob
+              - s3:GetJob
+              - s3:ListJobs
+              - s3:UpdateJobPriority
+              - s3:UpdateJobStatus
+              - s3control:DescribeJob
+              - s3:DescribeJob
+            Resource: !Sub 'arn:aws:s3:${AWS::Region}:${AWS::AccountId}:job/*'
+          
+          - Sid: AllowS3BucketOperations
+            Effect: Allow
+            Action:
+              - s3:ListBucket
+              - s3:GetObject
+              - s3:PutObject
+            Resource:
+              - !Join ['', ['arn:aws:s3:::', !Select [0, !Ref AssetBuckets]]]
+              - !Join ['', ['arn:aws:s3:::', !Select [0, !Ref AssetBuckets], '/*']]
+              - !Join ['', ['arn:aws:s3:::', !Select [1, !Ref AssetBuckets]]]
+              - !Join ['', ['arn:aws:s3:::', !Select [1, !Ref AssetBuckets], '/*']]
+              - !Sub 'arn:aws:s3:::${ManifestBucket}'
+              - !Sub 'arn:aws:s3:::${ManifestBucket}/*'
+
+          - Sid: AllowPassRole
+            Effect: Allow
+            Action: iam:PassRole
+            Resource: 
+              - !Sub 'arn:aws:iam::${AWS::AccountId}:role/${RoleName}'
+
 Outputs:
   RoleARN:
     Description: ARN of the created IAM Role
@@ -77,3 +128,6 @@ Outputs:
   PolicyARN:
     Description: ARN of the created IAM Policy
     Value: !Ref ProjectRestorePolicy
+  UserPolicyARN:
+    Description: ARN of the IAM user policy
+    Value: !Ref ProjectRestoreUserPolicy
