--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,10 @@ updates:
     commit-message:
       prefix: "go"
       include: "scope"
+    # Add secrets access for Go updates
+    secrets:
+      - AWS_REGION
+      - AWS_ROLE_TO_ASSUME
 
   # API Dockerfile
   - package-ecosystem: "docker"
@@ -26,9 +30,10 @@ updates:
     commit-message:
       prefix: "docker"
       include: "scope"
-    ignore:
-      - dependency-name: "*"
-        update-types: ["version-update:semver-patch"]
+    # Add secrets access for API Docker updates
+    secrets:
+      - AWS_REGION
+      - AWS_ROLE_TO_ASSUME
 
   # Worker Dockerfile
   - package-ecosystem: "docker"
@@ -43,6 +48,7 @@ updates:
     commit-message:
       prefix: "docker"
       include: "scope"
-    ignore:
-      - dependency-name: "*"
-        update-types: ["version-update:semver-patch"]
+    # Add secrets access for Worker Docker updates
+    secrets:
+      - AWS_REGION
+      - AWS_ROLE_TO_ASSUME
