--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,3 +72,23 @@ jobs:
 
       - name: Push Docker image pluto-restore-assets-worker
         run: docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/pluto-restore-assets-worker:${{ env.GITHUB_RUN_NUMBER }}
+
+  dependabot-build:
+    runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.23.x
+
+      - name: Install dependencies
+        run: go mod download
+
+      - name: Test
+        run: go test -v ./...
+
+      - name: Skip AWS steps for Dependabot
+        run: echo "Skipping AWS steps for Dependabot PR"
